<resources>
    <string name="app_name" translatable="false">Daily Food Planner</string>

    <!--Basic-->
    <string name="btn_no">No</string>
    <string name="btn_yes">Yes</string>
    <string name="error_message">Something went wrong</string>
    <string name="error_message_edit">Something went wrong when editing</string>
    <string name="error_message_deleting">Something went wrong when deleting</string>

    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>

    <!--Navigation titles-->
    <string name="title_home">Home</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_recipes">Recipes</string>
    <string name="title_notes">Notes</string>
    <string name="title_recipe_details">Recipe Details</string>
    <string name="title_schedule_edit">Edit Schedule</string>
    <string name="title_settings">Settings</string>

    <!--Home screen-->
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="breakfast">Breakfast</string>
    <string name="snack1">Snack 1</string>
    <string name="lunch">Lunch</string>
    <string name="snack2">Snack 2</string>
    <string name="dinner">Dinner</string>
    <string name="leave_screen_dialog_title">Leaving</string>
    <string name="leave_screen_dialog_message">Are you sure you want to leave the Home screen?</string>
    <string name="no_recipe">No Recipe</string>
    <string name="today">Today,</string>
    <string name="daily_plan_successfully_added">Daily plan successfully added</string>
    <string name="daily_plan_successfully_updated">Daily plan successfully updated</string>
    <string name="daily_plan_exist">Daily Plan with %1$s date already exists</string>
    <string name="date_mandatory">Date is mandatory</string>
    <string name="breakfast_time_mandatory">Breakfast time is mandatory</string>
    <string name="snack_time_mandatory">Snack time is mandatory</string>
    <string name="lunch_time_mandatory">Lunch time is mandatory</string>
    <string name="dinner_time_mandatory">Dinner time is mandatory</string>


    <!--Notes screen-->
    <string name="notesTitle">Notes:</string>
    <string name="myNotes">My Notes</string>
    <string name="note_successfully_added">Note successfully added</string>
    <string name="note_successfully_deleted">Notes successfully deleted</string>

    <!--Schedule screen-->
    <string name="month_label">Month:</string>
    <string name="delete_title">Delete</string>
    <string name="delete_message">Are you sure you want to delete?</string>
    <string name="daily_plan_successfully_deleted">Daily Plan successfully deleted</string>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <!--Notifications-->
    <string name="notification_title">Daily Food Plan Notification</string>
    <string name="action_notify_daily_planer" translatable="false">com.example.dailyfoodplanner.action.DAILY_PLANER</string>
    <string name="action_notify_daily_receiver" translatable="false">com.example.dailyfoodplanner.action.DAILY_RECEIVER</string>
    <string name="notification_description">Time to eat</string>
    <string name="daily_planer" translatable="false">Daily Planer</string>

    <!--Recipes screen-->
    <string name="example_recipe_description" translatable="false">Lorem Ipsum is simply dummy text of the printing and
        typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since
        the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
        specimen book. It has survived not only five centuries, but also the leap into electronic
        typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
        release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
        publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>

    <string name="btn_show_more">Show More</string>
    <string name="recipe_search">Recipe to search for</string>
    <string name="btn_search">Search</string>
    <string name="recipe_title">Enter recipe title</string>
    <string name="recipe_description">Enter recipe description</string>
    <string name="recipe_ingredients">Enter ingredients separated by comma</string>
    <string name="add_recipe_title">Add New Recipe</string>
    <string name="add_recipe">Add</string>
    <string name="cancel_recipe">Cancel</string>
    <string name="edit_recipe_title">Edit Recipe</string>
    <string name="update_recipe">Update</string>
    <string name="recipe_successfully_added">Recipe successfully added</string>
    <string name="recipe_successfully_updated">Recipe successfully updated</string>
    <string name="recipe_successfully_deleted">Recipe successfully deleted</string>

    <!--Recipe Details screen-->
    <string name="recipe_details_description">Description:</string>
    <string name="recipe_details_ingredients">Ingredients:</string>

    <!--Settings Screen-->
    <string name="notifications_label">Turn notifications ON/OFF</string>
    <string name="logout">Logout</string>
    <string name="notification_dialog_title">Change notification settings</string>
    <string name="notification_dialog_message">To change notification settings go to the phone settings</string>
    <string name="picture_successfully_added">Picture successfully added</string>

    <!--Login and Register screen-->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="no_account_register">No Account? Register here</string>
    <string name="email_mandatory">Email is mandatory</string>
    <string name="password_mandatory">Password is mandatory</string>
    <string name="username_mandatory">Username is mandatory</string>
    <string name="password_not_long_enough">Password has to be at least 6 characters</string>
    <string name="user_does_not_exist">User does not exist</string>
</resources>
