<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dailyfoodplanner.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >

        <argument
            android:name="dailyPlanId"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null"/>

        <action
            android:id="@+id/openSchedule"
            app:destination="@id/navigation_schedule"/>

    </fragment>

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="com.example.dailyfoodplanner.ui.schedule.ScheduleFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_schedule">
        <action
            android:id="@+id/openHome"
            app:destination="@+id/navigation_home"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_recipes"
        android:name="com.example.dailyfoodplanner.ui.recipes.RecipesFragment"
        android:label="@string/title_recipes"
        tools:layout="@layout/fragment_recipes" />

    <fragment
        android:id="@+id/navigation_notes"
        android:name="com.example.dailyfoodplanner.ui.notes.NotesFragment"
        android:label="@string/title_notes"
        tools:layout="@layout/fragment_notes" />
</navigation>