<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:elevation="3dp"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Monday, 10/07/20"
                android:textSize="18sp"
                android:textColor="@color/homeTextView"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/tvBreakfastLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvDate"
                android:text="@string/breakfast"
                android:textSize="18sp"
                android:textColor="@color/homeTextView"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/tvBreakfastTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tvBreakfastLabel"
                android:layout_alignBottom="@id/tvBreakfastLabel"
                android:text="10:00"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="15dp"/>

            <TextView
                android:id="@+id/tvBreakfastRecipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tvBreakfastTime"
                android:layout_alignBottom="@id/tvBreakfastTime"
                android:text="Recipe"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="15dp"/>

            <TextView
                android:id="@+id/tvSnack1Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvBreakfastLabel"
                android:text="@string/snack1"
                android:textSize="18sp"
                android:textColor="@color/homeTextView"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/tvSnack1Time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tvSnack1Label"
                android:layout_alignBottom="@id/tvSnack1Label"
                android:layout_alignRight="@id/tvBreakfastTime"
                android:textAlignment="textEnd"
                android:text="10:00"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="15dp"/>

            <TextView
                android:id="@+id/tvSnack1Recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tvSnack1Time"
                android:layout_alignBottom="@id/tvSnack1Time"
                android:text="Recipe"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="15dp"/>

            <TextView
                android:id="@+id/tvLunchLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvSnack1Label"
                android:text="@string/lunch"
                android:textSize="18sp"
                android:textColor="@color/homeTextView"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/tvLunchTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tvLunchLabel"
                android:layout_alignBottom="@id/tvLunchLabel"
                android:layout_alignRight="@id/tvBreakfastTime"
                android:textAlignment="textEnd"
                android:text="10:00"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="15dp"/>

            <TextView
                android:id="@+id/tvLunchRecipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tvLunchTime"
                android:layout_alignBottom="@id/tvLunchTime"
                android:text="Recipe"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="15dp"/>

            <TextView
                android:id="@+id/tvSnack2Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvLunchLabel"
                android:text="@string/snack2"
                android:textSize="18sp"
                android:textColor="@color/homeTextView"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/tvSnack2Time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tvSnack2Label"
                android:layout_alignBottom="@id/tvSnack2Label"
                android:layout_alignRight="@id/tvBreakfastTime"
                android:textAlignment="textEnd"
                android:text="10:00"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="15dp"/>

            <TextView
                android:id="@+id/tvSnack2Recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tvSnack2Time"
                android:layout_alignBottom="@id/tvSnack2Time"
                android:text="Recipe"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="15dp"/>

            <TextView
                android:id="@+id/tvDinnerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvSnack2Label"
                android:text="@string/dinner"
                android:textSize="18sp"
                android:textColor="@color/homeTextView"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/tvDinnerTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tvDinnerLabel"
                android:layout_alignBottom="@id/tvDinnerLabel"
                android:layout_alignRight="@id/tvBreakfastTime"
                android:textAlignment="textEnd"
                android:text="10:00"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="15dp"/>

            <TextView
                android:id="@+id/tvDinnerRecipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tvDinnerTime"
                android:layout_alignBottom="@id/tvDinnerTime"
                android:text="Recipe"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="15dp"/>

            <ImageButton
                android:id="@+id/btnDeleteSchedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvDate"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="15dp"
                android:background="@android:drawable/ic_menu_delete"/>

            <ImageButton
                android:id="@+id/btnEditSchedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnDeleteSchedule"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@android:drawable/ic_menu_edit"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>